[gd_scene load_steps=26 format=3 uid="uid://clal76rk80pug"]

[ext_resource type="Script" path="res://pipeline_menu.gd" id="1_fga3a"]
[ext_resource type="Script" path="res://conversation_box.gd" id="1_j4q8b"]
[ext_resource type="Script" path="res://conversation_list.gd" id="2_oh8d6"]
[ext_resource type="Script" path="res://settings_button.gd" id="2_rkgon"]
[ext_resource type="Script" path="res://scripts/signalling/collection_select.gd" id="5_0kl0e"]
[ext_resource type="Script" path="res://chat_edit.gd" id="5_hl5o8"]
[ext_resource type="Script" path="res://scripts/signalling/collection_folder_dialog.gd" id="6_xom7l"]
[ext_resource type="Script" path="res://new_collection_button.gd" id="7_3lfrk"]
[ext_resource type="Script" path="res://send_button.gd" id="8_5q6m2"]
[ext_resource type="Script" path="res://sources_list.gd" id="9_tff5l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nkx6i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dj7yx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v3cii"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_un5gm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kso6n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a5o53"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rfqbj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6l0vg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pu4jb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cpyin"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_skbvg"]
bg_color = Color(0.1253, 0.287345, 1.44392e-07, 1)
corner_radius_top_right = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ogq1e"]
bg_color = Color(0.1253, 0.287345, 1.44392e-07, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ofnc7"]
bg_color = Color(0.123098, 0.283164, 1.44392e-07, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xcwhl"]
content_margin_left = 5.0
content_margin_right = 5.0
bg_color = Color(0.1253, 0.287345, 1.44392e-07, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_76wq5"]
bg_color = Color(0.1253, 0.287345, 1.44392e-07, 1)
corner_radius_top_left = 5

[node name="MainScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0828903, 0.216408, 0.120971, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuBar" type="MenuBar" parent="Background/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Background/VBoxContainer/MenuBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="PipelineButton" type="Button" parent="Background/VBoxContainer/MenuBar/HBoxContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_nkx6i")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_dj7yx")
theme_override_styles/hover = SubResource("StyleBoxEmpty_v3cii")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_un5gm")
theme_override_styles/normal = SubResource("StyleBoxEmpty_kso6n")
text = "Pipeline"
script = ExtResource("1_fga3a")

[node name="SettingsButton" type="Button" parent="Background/VBoxContainer/MenuBar/HBoxContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_a5o53")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_rfqbj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_6l0vg")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_pu4jb")
theme_override_styles/normal = SubResource("StyleBoxEmpty_cpyin")
text = "Settings"
script = ExtResource("2_rkgon")

[node name="GridContainer" type="GridContainer" parent="Background/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 3

[node name="LeftColumn" type="VBoxContainer" parent="Background/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="Background/VBoxContainer/GridContainer/LeftColumn"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_skbvg")

[node name="VBoxContainer" type="VBoxContainer" parent="Background/VBoxContainer/GridContainer/LeftColumn/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Background/VBoxContainer/GridContainer/LeftColumn/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Conversations"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Background/VBoxContainer/GridContainer/LeftColumn/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ConversationList" type="VBoxContainer" parent="Background/VBoxContainer/GridContainer/LeftColumn/Panel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_oh8d6")

[node name="CenterColumn" type="VBoxContainer" parent="Background/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="Background/VBoxContainer/GridContainer/CenterColumn"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Background/VBoxContainer/GridContainer/CenterColumn/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ScrollContainer" type="ScrollContainer" parent="Background/VBoxContainer/GridContainer/CenterColumn/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ConversationBox" type="VBoxContainer" parent="Background/VBoxContainer/GridContainer/CenterColumn/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_j4q8b")

[node name="ChatEdit" type="TextEdit" parent="Background/VBoxContainer/GridContainer/CenterColumn/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_ogq1e")
theme_override_styles/focus = SubResource("StyleBoxFlat_ofnc7")
placeholder_text = "Ask a question..."
script = ExtResource("5_hl5o8")

[node name="SubmissionRow" type="HBoxContainer" parent="Background/VBoxContainer/GridContainer/CenterColumn/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 2

[node name="CollectionLabel" type="Label" parent="Background/VBoxContainer/GridContainer/CenterColumn/MarginContainer/VBoxContainer/SubmissionRow"]
layout_mode = 2
text = "Select Collection: "

[node name="CollectionSelect" type="OptionButton" parent="Background/VBoxContainer/GridContainer/CenterColumn/MarginContainer/VBoxContainer/SubmissionRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
script = ExtResource("5_0kl0e")

[node name="NewCollectionButton" type="Button" parent="Background/VBoxContainer/GridContainer/CenterColumn/MarginContainer/VBoxContainer/SubmissionRow"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_xcwhl")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_xcwhl")
theme_override_styles/hover = SubResource("StyleBoxFlat_xcwhl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xcwhl")
theme_override_styles/normal = SubResource("StyleBoxFlat_xcwhl")
text = "New Collection"
script = ExtResource("7_3lfrk")

[node name="SendButton" type="Button" parent="Background/VBoxContainer/GridContainer/CenterColumn/MarginContainer/VBoxContainer/SubmissionRow"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_xcwhl")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_xcwhl")
theme_override_styles/hover = SubResource("StyleBoxFlat_xcwhl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xcwhl")
theme_override_styles/normal = SubResource("StyleBoxFlat_xcwhl")
text = "Send"
script = ExtResource("8_5q6m2")

[node name="RightColumn" type="VBoxContainer" parent="Background/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="Background/VBoxContainer/GridContainer/RightColumn"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_76wq5")

[node name="VBoxContainer" type="VBoxContainer" parent="Background/VBoxContainer/GridContainer/RightColumn/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Background/VBoxContainer/GridContainer/RightColumn/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Sources"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Background/VBoxContainer/GridContainer/RightColumn/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SourcesList" type="VBoxContainer" parent="Background/VBoxContainer/GridContainer/RightColumn/Panel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("9_tff5l")

[node name="CollectionFolderDialog" type="FileDialog" parent="Background"]
title = "Open a Directory"
ok_button_text = "Select Current Folder"
file_mode = 2
use_native_dialog = true
script = ExtResource("6_xom7l")
